SP3: Production NBA Collection Manager

--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,5 @@
-# Backend files (stays local on XAMPP)
-backend/
-
-# JSON data files
-*.json
-
-# OS files
+.env
+api/.env
+*.log
 .DS_Store
 Thumbs.db
-
-# IDE files
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
-
-# Logs
-*.log
-
-# Temporary files
-*.tmp
-*.temp
